update form styles and responsive

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -10,8 +10,7 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: 0;
 }
 
@@ -25,12 +24,12 @@ body {
   font-family: "Lato", sans-serif;
   font-style: normal;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 a {
   text-decoration: none;
 }
-
 a:hover {
   cursor: pointer;
 }
@@ -56,23 +55,13 @@ p {
 .header__content {
   height: 100%;
   color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding: 5vh 0;
 }
-
 @media (min-width: 1200px) {
   .header__content {
     height: 100vh;
@@ -81,7 +70,6 @@ p {
     padding: 0;
   }
 }
-
 .header__content h1 {
   font-weight: bold;
   font-size: 5vmin;
@@ -90,7 +78,6 @@ p {
   text-transform: uppercase;
   text-align: center;
 }
-
 @media (min-width: 992px) {
   .header__content h1 {
     display: block;
@@ -99,7 +86,6 @@ p {
     margin-top: 2em;
   }
 }
-
 @media (min-width: 1200px) {
   .header__content h1 {
     position: absolute;
@@ -109,19 +95,14 @@ p {
     top: 257px;
     font-size: 72px;
     line-height: 86px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #ffffff;
     margin: 0;
   }
 }
-
 .header__content p {
   font-size: 20px;
   line-height: 150%;
@@ -129,7 +110,6 @@ p {
   font-weight: 600;
   margin: 39px;
 }
-
 @media (min-width: 1200px) {
   .header__content p {
     width: 540px;
@@ -141,7 +121,6 @@ p {
     margin: 0;
   }
 }
-
 .header__content button {
   text-align: center;
   text-transform: uppercase;
@@ -155,7 +134,6 @@ p {
   color: #ed4c5c;
   line-height: 150%;
 }
-
 @media (min-width: 1200px) {
   .header__content button {
     left: 640px;
@@ -173,13 +151,11 @@ p {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 @media (min-width: 1200px) {
   .features,
-  .technology {
+.technology {
     padding-bottom: 124px;
     width: 90vw;
   }
@@ -188,35 +164,24 @@ p {
 .feature__item {
   position: relative;
   height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   margin: 0 auto;
   padding: 0 2vw;
 }
-
 @media (min-width: 1200px) {
   .feature__item {
     width: 350px;
     padding: 0;
   }
 }
-
 .feature__item .feature__item--image {
   display: block;
   height: 250px;
   margin: 0 auto;
 }
-
 .feature__item .feature__item--content {
   position: absolute;
   top: 44%;
@@ -226,11 +191,9 @@ p {
   text-align: center;
   padding: 32px;
   background: #ffffff;
-  -webkit-box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-
 .feature__item .feature__item--content a {
   color: #ed4c5c;
   font-weight: bold;
@@ -239,86 +202,52 @@ p {
 
 .technology {
   color: #101010;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 .technology .technology__item {
   text-align: center;
   width: 50vw;
   padding: 3vw;
   height: 290px;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-start;
+  align-items: center;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item {
     width: 255px;
     padding: 30px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
 }
-
 .technology .technology__item .technology__item--image {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
 .technology .technology__item .technology__item--image :nth-child(2) {
   position: absolute;
   top: 20%;
   width: 12%;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--image :nth-child(2) {
     top: 26%;
     width: unset;
   }
 }
-
 .technology .technology__item .technology__item--image img {
   margin: 0 auto;
 }
-
 .technology .technology__item .technology__item--content {
   margin-top: 19px;
   padding: 0 34px 4px;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--content {
     padding: 0;
@@ -334,42 +263,37 @@ p {
 .contact-section {
   padding: 5vw;
 }
-
 @media (min-width: 992px) {
   .red-section,
-  .contact-section {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.contact-section {
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
-
 @media (min-width: 1200px) {
   .red-section,
-  .contact-section {
+.contact-section {
     padding: 65px 156px;
     max-height: 500px;
   }
 }
 
+.red-section__content,
+.red-section__slider,
+.contact-section__content,
+.contact-section__form {
+  padding: 2vw;
+}
 @media (min-width: 992px) {
   .red-section__content,
-  .red-section__slider,
-  .contact-section__content,
-  .contact-section__form {
+.red-section__slider,
+.contact-section__content,
+.contact-section__form {
     width: 50%;
   }
 }
-
 .red-section__content h1,
 .red-section__slider h1,
 .contact-section__content h1,
@@ -378,16 +302,15 @@ p {
   font-size: 36px;
   line-height: 43px;
 }
-
 @media (min-width: 1200px) {
   .red-section__content h1,
-  .red-section__slider h1,
-  .contact-section__content h1,
-  .contact-section__form h1 {
+.red-section__slider h1,
+.contact-section__content h1,
+.contact-section__form h1 {
     margin-top: 24px;
+    width: 445px;
   }
 }
-
 .red-section__content p,
 .red-section__slider p,
 .contact-section__content p,
@@ -397,12 +320,11 @@ p {
   text-align: justify;
   margin: 24px 0;
 }
-
 @media (min-width: 992px) {
   .red-section__content p,
-  .red-section__slider p,
-  .contact-section__content p,
-  .contact-section__form p {
+.red-section__slider p,
+.contact-section__content p,
+.contact-section__form p {
     width: 445px;
   }
 }
@@ -410,11 +332,24 @@ p {
 .contact-section {
   color: #101010;
 }
-
 @media (min-width: 1200px) {
   .contact-section {
     padding-bottom: 78px;
   }
+}
+
+.footer-section {
+  background: #101010;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 1vw;
+}
+.footer-section img {
+  width: 30%;
+  margin: 0 auto;
+  border-radius: 6px;
 }
 
 :root {
@@ -429,8 +364,7 @@ p {
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: none;
 }
 
@@ -460,7 +394,6 @@ button {
 }
 
 .no-transition {
-  -webkit-transition: none !important;
   transition: none !important;
 }
 
@@ -468,6 +401,10 @@ body {
   font: 1.6rem/1.5 "Lato", sans-serif;
   color: #ffffff;
   min-height: 100vh;
+}
+
+.active {
+  font-weight: bolder;
 }
 
 /* HEADER
@@ -483,16 +420,13 @@ header {
   background-position: top right, top right;
   background-repeat: no-repeat, no-repeat;
 }
-
 @media (min-width: 1200px) {
   header {
     height: 100vh;
   }
 }
-
 header::after {
   content: "";
-  background: -webkit-gradient(linear, left top, right top, from(rgba(213, 32, 71, 0.8)), to(rgba(238, 61, 27, 0.8)));
   background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
   top: 0;
   left: 0;
@@ -507,19 +441,12 @@ header::after {
   background: transparent;
   position: absolute;
   width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   /* TOP MENU
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 }
-
 @media (min-width: 992px) {
   .page-header {
     padding: 0 116px;
@@ -527,46 +454,29 @@ header::after {
     top: 17px;
   }
 }
-
 @media (min-width: 1200px) {
   .page-header {
     padding: 0 160px;
   }
 }
-
 .page-header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   font-size: 14px;
   position: relative;
   width: 100%;
   text-transform: uppercase;
 }
-
 .page-header .horizontal-logo,
 .page-header .page-header {
   margin: 0 1em;
 }
-
 .page-header .icon-logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
 }
-
 .page-header .menu {
   display: none;
   margin-left: auto;
@@ -574,15 +484,12 @@ header::after {
   font-weight: bold;
   line-height: 17px;
 }
-
 .page-header .menu li {
   padding: 0 1em;
 }
-
 .page-header .top-menu-wrapper {
   color: #000000;
 }
-
 .page-header .top-menu-wrapper::before {
   content: "";
   position: fixed;
@@ -591,10 +498,8 @@ header::after {
   right: 0;
   bottom: 0;
   z-index: -1;
-  -webkit-transition: background 0.5s;
   transition: background 0.5s;
 }
-
 .page-header .panel,
 .page-header .top-menu {
   position: fixed;
@@ -602,149 +507,104 @@ header::after {
   left: 0;
   bottom: 0;
   z-index: 2;
-  -webkit-transform: translate3d(-100%, 0, 0);
-          transform: translate3d(-100%, 0, 0);
-  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
+  transform: translate3d(-100%, 0, 0);
   transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
   z-index: 146;
 }
-
 .page-header .panel1 {
   width: 100%;
   background: #dd4d64;
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
+  transition-delay: 0.3s;
   z-index: 100;
 }
-
 .page-header .panel2 {
   width: calc(100% - 3rem);
   background: #d52047;
-  -webkit-transition-delay: 0.1s;
-          transition-delay: 0.1s;
+  transition-delay: 0.1s;
   z-index: 100;
 }
-
 .page-header .top-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: calc(100% - 6rem);
   overflow-y: auto;
   padding: 2rem;
   color: #ffffff;
 }
-
 .page-header .top-menu a {
   font-size: 14px;
 }
-
+.page-header .top-menu a:hover {
+  color: #101010;
+}
 .page-header .top-menu-wrapper.show-offcanvas::before {
   background: var(--overlay);
   z-index: 1;
 }
-
 .page-header .top-menu-wrapper.show-offcanvas .panel,
 .page-header .top-menu-wrapper.show-offcanvas .top-menu {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  -webkit-transition-duration: 0.7s;
-          transition-duration: 0.7s;
+  transform: translate3d(0, 0, 0);
+  transition-duration: 0.7s;
 }
-
 .page-header .top-menu-wrapper.show-offcanvas .panel1 {
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
+  transition-delay: 0s;
 }
-
 .page-header .top-menu-wrapper.show-offcanvas .panel2 {
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
-  -webkit-box-shadow: var(--elementShadow);
-          box-shadow: var(--elementShadow);
+  transition-delay: 0.2s;
+  box-shadow: var(--elementShadow);
 }
-
 .page-header .top-menu-wrapper.show-offcanvas .top-menu {
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0 0 4rem 0.5rem;
-          box-shadow: rgba(0, 0, 0, 0.25) 0 0 4rem 0.5rem;
+  transition-delay: 0.4s;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 0 4rem 0.5rem;
 }
-
 .page-header .top-menu li + li {
   margin-top: 1.5rem;
 }
-
 .page-header .top-menu > li:last-child {
   margin-top: auto;
 }
-
 .page-header .top-menu > li:last-child ul a {
   display: inline-block;
   font-size: 1.3rem;
   text-transform: uppercase;
-  -webkit-transition: color 0.35s ease-out;
   transition: color 0.35s ease-out;
 }
-
 .page-header .top-menu > li:last-child ul a:hover {
-  color: var(--red);
+  color: #101010;
 }
-
 .page-header .sub-menu {
   padding: 1.5rem 2rem 0;
 }
-
 .page-header .top-menu .mob-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 2rem;
 }
-
 .page-header .top-menu .mob-block img {
   max-width: 150px;
 }
-
 .page-header .top-menu .mob-block i {
   color: #ffffff;
   font-size: 2em;
 }
-
 .page-header .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: 3rem;
   margin-bottom: 1rem;
 }
-
 .page-header .socials li + li {
   margin-top: 0;
 }
-
 .page-header .socials li + li:hover {
   cursor: pointer;
 }
-
 .page-header .socials .fa-stack {
   font-size: 1.7rem;
   color: #dd4d64;
 }
-
 .page-header .socials .fa-stack .fab {
   font-size: 1.2rem;
 }
+
 /*# sourceMappingURL=header.css.map */
