--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -7,8 +7,7 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   outline: 0;
 }
 
@@ -28,7 +27,6 @@ body {
 a {
   text-decoration: none;
 }
-
 a:hover {
   cursor: pointer;
 }
@@ -54,23 +52,13 @@ p {
 .header__content {
   height: 100%;
   color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   width: 100vw;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   padding: 5vh 0;
 }
-
 @media (min-width: 1200px) {
   .header__content {
     height: 100vh;
@@ -79,7 +67,6 @@ p {
     padding: 0;
   }
 }
-
 .header__content h1 {
   font-weight: bold;
   font-size: 5vmin;
@@ -88,7 +75,6 @@ p {
   text-transform: uppercase;
   text-align: center;
 }
-
 @media (min-width: 992px) {
   .header__content h1 {
     display: block;
@@ -97,7 +83,6 @@ p {
     margin-top: 2em;
   }
 }
-
 @media (min-width: 1200px) {
   .header__content h1 {
     position: absolute;
@@ -107,19 +92,14 @@ p {
     top: 257px;
     font-size: 72px;
     line-height: 86px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    align-items: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #ffffff;
     margin: 0;
   }
 }
-
 .header__content p {
   font-size: 20px;
   line-height: 150%;
@@ -127,7 +107,6 @@ p {
   font-weight: 600;
   margin: 39px;
 }
-
 @media (min-width: 1200px) {
   .header__content p {
     width: 540px;
@@ -139,7 +118,6 @@ p {
     margin: 0;
   }
 }
-
 .header__content button {
   text-align: center;
   text-transform: uppercase;
@@ -153,7 +131,6 @@ p {
   color: #ed4c5c;
   line-height: 150%;
 }
-
 @media (min-width: 1200px) {
   .header__content button {
     left: 640px;
@@ -171,13 +148,11 @@ p {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
 }
-
 @media (min-width: 1200px) {
   .features,
-  .technology {
+.technology {
     padding-bottom: 124px;
     width: 90vw;
   }
@@ -186,35 +161,24 @@ p {
 .feature__item {
   position: relative;
   height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
   margin: 0 auto;
   padding: 0 2vw;
 }
-
 @media (min-width: 1200px) {
   .feature__item {
     width: 350px;
     padding: 0;
   }
 }
-
 .feature__item .feature__item--image {
   display: block;
   height: 250px;
   margin: 0 auto;
 }
-
 .feature__item .feature__item--content {
   position: absolute;
   top: 44%;
@@ -224,11 +188,9 @@ p {
   text-align: center;
   padding: 32px;
   background: #ffffff;
-  -webkit-box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-
 .feature__item .feature__item--content a {
   color: #ed4c5c;
   font-weight: bold;
@@ -237,86 +199,52 @@ p {
 
 .technology {
   color: #101010;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
 }
-
 .technology .technology__item {
   text-align: center;
   width: 50vw;
   padding: 3vw;
   height: 290px;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: flex-start;
+  align-items: center;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item {
     width: 255px;
     padding: 30px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
 }
-
 .technology .technology__item .technology__item--image {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-
 .technology .technology__item .technology__item--image :nth-child(2) {
   position: absolute;
   top: 20%;
   width: 12%;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--image :nth-child(2) {
     top: 26%;
     width: unset;
   }
 }
-
 .technology .technology__item .technology__item--image img {
   margin: 0 auto;
 }
-
 .technology .technology__item .technology__item--content {
   margin-top: 19px;
   padding: 0 34px 4px;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--content {
     padding: 0;
@@ -332,28 +260,18 @@ p {
 .contact-section {
   padding: 5vw;
 }
-
 @media (min-width: 992px) {
   .red-section,
-  .contact-section {
-    display: -webkit-box;
-    display: -ms-flexbox;
+.contact-section {
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
   }
 }
-
 @media (min-width: 1200px) {
   .red-section,
-  .contact-section {
+.contact-section {
     padding: 65px 156px;
     max-height: 500px;
   }
@@ -365,16 +283,14 @@ p {
 .contact-section__form {
   padding: 2vw;
 }
-
 @media (min-width: 992px) {
   .red-section__content,
-  .red-section__slider,
-  .contact-section__content,
-  .contact-section__form {
+.red-section__slider,
+.contact-section__content,
+.contact-section__form {
     width: 50%;
   }
 }
-
 .red-section__content h1,
 .red-section__slider h1,
 .contact-section__content h1,
@@ -383,17 +299,15 @@ p {
   font-size: 36px;
   line-height: 43px;
 }
-
 @media (min-width: 1200px) {
   .red-section__content h1,
-  .red-section__slider h1,
-  .contact-section__content h1,
-  .contact-section__form h1 {
+.red-section__slider h1,
+.contact-section__content h1,
+.contact-section__form h1 {
     margin-top: 24px;
     width: 445px;
   }
 }
-
 .red-section__content p,
 .red-section__slider p,
 .contact-section__content p,
@@ -403,12 +317,11 @@ p {
   text-align: justify;
   margin: 24px 0;
 }
-
 @media (min-width: 992px) {
   .red-section__content p,
-  .red-section__slider p,
-  .contact-section__content p,
-  .contact-section__form p {
+.red-section__slider p,
+.contact-section__content p,
+.contact-section__form p {
     width: 445px;
   }
 }
@@ -416,7 +329,6 @@ p {
 .contact-section {
   color: #101010;
 }
-
 @media (min-width: 1200px) {
   .contact-section {
     padding-bottom: 78px;
@@ -425,25 +337,79 @@ p {
 
 .footer-section {
   background: #101010;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   padding: 1vw;
 }
-
 .footer-section img {
   width: 30%;
   margin: 0 auto;
   border-radius: 6px;
 }
-/*# sourceMappingURL=main.css.map */
+
+@media (min-width: 1200px) {
+  form {
+    width: 540px;
+    height: 305px;
+  }
+}
+form .form__name {
+  display: block;
+}
+@media (min-width: 992px) {
+  form .form__name {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+form .form__name input {
+  margin-right: 0;
+}
+form input,
+form select {
+  padding: 10px 15px;
+  border: 1px solid #333333;
+  border-radius: 6px;
+  width: 100%;
+  height: 60px;
+  background: transparent;
+  font-size: 16px;
+  line-height: 19px;
+  color: rgba(19, 39, 67, 0.5);
+  margin: 10px 0;
+}
+@media (min-width: 992px) {
+  form input,
+form select {
+    margin: 23px 0;
+    padding: 20px 30px;
+  }
+  form input:first-of-type,
+form select:first-of-type {
+    margin-right: 23px;
+  }
+}
+form button {
+  width: 160px;
+  height: 50px;
+  background: #ed4c5c;
+  border: 1.5px solid #ed4c5c;
+  border-radius: 6px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-size: 14px;
+  margin: 2vw auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (min-width: 992px) {
+  form button {
+    margin: 0;
+  }
+}
+
+/*# sourceMappingURL=form.css.map */
