--- a/src/assets/scss/form.css
+++ b/src/assets/scss/form.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-/* RESET RULES & HELPER CLASSES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
 @import url("https://fonts.googleapis.com/css?family=Lato:400,400i,700,900&display=swap&subset=latin-ext");
 * {
   -webkit-font-smoothing: antialiased;
@@ -366,7 +363,7 @@ p {
 .red-section__slider,
 .contact-section__content,
 .contact-section__form {
-  padding: 5vw;
+  padding: 2vw;
 }
 
 @media (min-width: 992px) {
@@ -450,342 +447,85 @@ p {
   border-radius: 6px;
 }
 
-:root {
-  --linearBackground: linear-gradient(
-    90deg,
-    rgba(213, 32, 71, 0.8) 0%,
-    rgba(238, 61, 27, 0.8) 100%
-  );
-  --elementShadow: 0px 10px 26px -9px rgba(0, 0, 0, 0.75);
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  outline: none;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-button {
-  background: transparent;
-  border: none;
-  cursor: pointer;
-}
-
-ul {
-  list-style: none;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-}
-
-a,
-button {
-  color: inherit;
-}
-
-.no-transition {
-  -webkit-transition: none !important;
-  transition: none !important;
-}
-
-body {
-  font: 1.6rem/1.5 "Lato", sans-serif;
-  color: #ffffff;
-  min-height: 100vh;
-}
-
-.active {
-  font-weight: bolder;
-}
-
-/* HEADER
-  –––––––––––––––––––––––––––––––––––––––––––––––––– */
-header {
-  position: relative;
-  width: 100vw;
-  height: 50vh;
-  color: #ffffff;
-  z-index: 10000;
-  background-image: url(../img/Rectangle3-min.png);
-  background-size: cover, cover;
-  background-position: top right, top right;
-  background-repeat: no-repeat, no-repeat;
-}
-
 @media (min-width: 1200px) {
-  header {
-    height: 100vh;
+  form {
+    width: 540px;
+    height: 305px;
   }
 }
 
-header::after {
-  content: "";
-  background: -webkit-gradient(linear, left top, right top, from(rgba(213, 32, 71, 0.8)), to(rgba(238, 61, 27, 0.8)));
-  background: linear-gradient(90deg, rgba(213, 32, 71, 0.8) 0%, rgba(238, 61, 27, 0.8) 100%);
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  z-index: -1;
-}
-
-.page-header {
-  padding: 1rem;
-  background: transparent;
-  position: absolute;
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  /* TOP MENU
-  –––––––––––––––––––––––––––––––––––––––––––––––––– */
+form .form__name {
+  display: block;
 }
 
 @media (min-width: 992px) {
-  .page-header {
-    padding: 0 116px;
-    height: 100px;
-    top: 17px;
+  form .form__name {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
-@media (min-width: 1200px) {
-  .page-header {
-    padding: 0 160px;
+form .form__name input {
+  margin-right: 0;
+}
+
+form input,
+form select {
+  padding: 10px 15px;
+  border: 1px solid #333333;
+  border-radius: 6px;
+  width: 100%;
+  height: 60px;
+  background: transparent;
+  font-size: 16px;
+  line-height: 19px;
+  color: rgba(19, 39, 67, 0.5);
+  margin: 10px 0;
+}
+
+@media (min-width: 992px) {
+  form input,
+  form select {
+    margin: 23px 0;
+    padding: 20px 30px;
+  }
+  form input:first-of-type,
+  form select:first-of-type {
+    margin-right: 23px;
   }
 }
 
-.page-header nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  font-size: 14px;
-  position: relative;
-  width: 100%;
+form button {
+  width: 160px;
+  height: 50px;
+  background: #ed4c5c;
+  border: 1.5px solid #ed4c5c;
+  border-radius: 6px;
   text-transform: uppercase;
-}
-
-.page-header .horizontal-logo,
-.page-header .page-header {
-  margin: 0 1em;
-}
-
-.page-header .icon-logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.page-header .menu {
-  display: none;
-  margin-left: auto;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 17px;
-}
-
-.page-header .menu li {
-  padding: 0 1em;
-}
-
-.page-header .top-menu-wrapper {
-  color: #000000;
-}
-
-.page-header .top-menu-wrapper::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  -webkit-transition: background 0.5s;
-  transition: background 0.5s;
-}
-
-.page-header .panel,
-.page-header .top-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  z-index: 2;
-  -webkit-transform: translate3d(-100%, 0, 0);
-          transform: translate3d(-100%, 0, 0);
-  -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  transition: transform 0.4s cubic-bezier(0.23, 1, 0.32, 1), -webkit-transform 0.4s cubic-bezier(0.23, 1, 0.32, 1);
-  z-index: 146;
-}
-
-.page-header .panel1 {
-  width: 100%;
-  background: #dd4d64;
-  -webkit-transition-delay: 0.3s;
-          transition-delay: 0.3s;
-  z-index: 100;
-}
-
-.page-header .panel2 {
-  width: calc(100% - 3rem);
-  background: #d52047;
-  -webkit-transition-delay: 0.1s;
-          transition-delay: 0.1s;
-  z-index: 100;
-}
-
-.page-header .top-menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: calc(100% - 6rem);
-  overflow-y: auto;
-  padding: 2rem;
   color: #ffffff;
-}
-
-.page-header .top-menu a {
   font-size: 14px;
-}
-
-.page-header .top-menu a:hover {
-  color: #101010;
-}
-
-.page-header .top-menu-wrapper.show-offcanvas::before {
-  background: var(--overlay);
-  z-index: 1;
-}
-
-.page-header .top-menu-wrapper.show-offcanvas .panel,
-.page-header .top-menu-wrapper.show-offcanvas .top-menu {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  -webkit-transition-duration: 0.7s;
-          transition-duration: 0.7s;
-}
-
-.page-header .top-menu-wrapper.show-offcanvas .panel1 {
-  -webkit-transition-delay: 0s;
-          transition-delay: 0s;
-}
-
-.page-header .top-menu-wrapper.show-offcanvas .panel2 {
-  -webkit-transition-delay: 0.2s;
-          transition-delay: 0.2s;
-  -webkit-box-shadow: var(--elementShadow);
-          box-shadow: var(--elementShadow);
-}
-
-.page-header .top-menu-wrapper.show-offcanvas .top-menu {
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0 0 4rem 0.5rem;
-          box-shadow: rgba(0, 0, 0, 0.25) 0 0 4rem 0.5rem;
-}
-
-.page-header .top-menu li + li {
-  margin-top: 1.5rem;
-}
-
-.page-header .top-menu > li:last-child {
-  margin-top: auto;
-}
-
-.page-header .top-menu > li:last-child ul a {
-  display: inline-block;
-  font-size: 1.3rem;
-  text-transform: uppercase;
-  -webkit-transition: color 0.35s ease-out;
-  transition: color 0.35s ease-out;
-}
-
-.page-header .top-menu > li:last-child ul a:hover {
-  color: #101010;
-}
-
-.page-header .sub-menu {
-  padding: 1.5rem 2rem 0;
-}
-
-.page-header .top-menu .mob-block {
+  margin: 2vw auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 2rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.page-header .top-menu .mob-block img {
-  max-width: 150px;
+@media (min-width: 992px) {
+  form button {
+    margin: 0;
+  }
 }
-
-.page-header .top-menu .mob-block i {
-  color: #ffffff;
-  font-size: 2em;
-}
-
-.page-header .socials {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-}
-
-.page-header .socials li + li {
-  margin-top: 0;
-}
-
-.page-header .socials li + li:hover {
-  cursor: pointer;
-}
-
-.page-header .socials .fa-stack {
-  font-size: 1.7rem;
-  color: #dd4d64;
-}
-
-.page-header .socials .fa-stack .fab {
-  font-size: 1.2rem;
-}
-/*# sourceMappingURL=header.css.map */
+/*# sourceMappingURL=form.css.map */
