--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,7 +7,6 @@
 *,
 *:before,
 *:after {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   outline: 0;
 }
@@ -28,15 +27,19 @@ body {
 a {
   text-decoration: none;
 }
-
 a:hover {
   cursor: pointer;
 }
 
 h2 {
-  padding: 63px 0;
+  padding: 5vw 0;
   color: black;
   text-align: center;
+}
+@media (min-width: 1200px) {
+  h2 {
+    padding: 63px 0;
+  }
 }
 
 h3 {
@@ -54,23 +57,13 @@ p {
 .header__content {
   height: 100%;
   color: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
   width: 100vw;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   padding: 5vh 0;
 }
-
 @media (min-width: 1200px) {
   .header__content {
     height: 100vh;
@@ -86,8 +79,8 @@ p {
   letter-spacing: 0.05em;
   text-transform: uppercase;
   text-align: center;
+  display: none;
 }
-
 @media (min-width: 992px) {
   .header__content h1 {
     display: block;
@@ -105,11 +98,7 @@ p {
     top: 257px;
     font-size: 72px;
     line-height: 86px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     letter-spacing: 0.05em;
     text-transform: uppercase;
@@ -124,7 +113,6 @@ p {
   font-weight: 600;
   margin: 39px;
 }
-
 @media (min-width: 1200px) {
   .header__content p {
     width: 540px;
@@ -135,6 +123,9 @@ p {
     position: absolute;
     margin: 0;
   }
+}
+.header__content a {
+  margin-bottom: 4vw;
 }
 .header__content button {
   text-align: center;
@@ -149,7 +140,6 @@ p {
   color: #ed4c5c;
   line-height: 150%;
 }
-
 @media (min-width: 1200px) {
   .header__content button {
     left: 640px;
@@ -157,6 +147,7 @@ p {
     position: absolute;
   }
 }
+
 #features {
   background: #fafafa;
 }
@@ -166,10 +157,8 @@ p {
   color: #101010;
   padding-bottom: 10vh;
   margin: 0 auto;
-  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
-
 @media (min-width: 1200px) {
   .features,
 .technology {
@@ -177,25 +166,17 @@ p {
     width: 90vw;
   }
 }
+
 .feature__item {
   position: relative;
   height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
   align-items: flex-start;
   margin: 0 auto;
   padding: 0 2vw;
 }
-
 @media (min-width: 1200px) {
   .feature__item {
     width: 350px;
@@ -207,7 +188,6 @@ p {
   height: 250px;
   margin: 0 auto;
 }
-
 .feature__item .feature__item--content {
   position: absolute;
   top: 44%;
@@ -217,11 +197,9 @@ p {
   text-align: center;
   padding: 32px;
   background: #ffffff;
-  -webkit-box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
 }
-
 .feature__item .feature__item--content a {
   color: #ed4c5c;
   font-weight: bold;
@@ -230,69 +208,40 @@ p {
 
 .technology {
   color: #101010;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
   justify-content: space-between;
 }
-
 .technology .technology__item {
   text-align: center;
   width: 50vw;
   padding: 3vw;
-  height: 290px;
+  height: 220px;
   position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-  -ms-flex-pack: start;
   justify-content: flex-start;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item {
     width: 255px;
+    height: 290px;
     padding: 30px;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 }
 .technology .technology__item .technology__item--image {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
 }
-
 .technology .technology__item .technology__item--image :nth-child(2) {
   position: absolute;
   top: 20%;
   width: 12%;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--image :nth-child(2) {
     top: 26%;
@@ -302,17 +251,16 @@ p {
 .technology .technology__item .technology__item--image img {
   margin: 0 auto;
 }
-
 .technology .technology__item .technology__item--content {
   margin-top: 19px;
-  padding: 0 34px 4px;
+  max-width: 191px;
 }
-
 @media (min-width: 992px) {
   .technology .technology__item .technology__item--content {
-    padding: 0;
+    padding: 0 34px 4px;
   }
 }
+
 #red {
   background: #ed4c5c;
   color: #ffffff;
@@ -322,21 +270,12 @@ p {
 .contact-section {
   padding: 5vw;
 }
-
 @media (min-width: 992px) {
   .red-section,
 .contact-section {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: start;
-    -ms-flex-align: start;
     align-items: flex-start;
   }
 }
@@ -347,13 +286,13 @@ p {
     max-height: 500px;
   }
 }
+
 .red-section__content,
 .red-section__slider,
 .contact-section__content,
 .contact-section__form {
   padding: 2vw;
 }
-
 @media (min-width: 992px) {
   .red-section__content,
 .red-section__slider,
@@ -370,7 +309,6 @@ p {
   font-size: 36px;
   line-height: 43px;
 }
-
 @media (min-width: 1200px) {
   .red-section__content h1,
 .red-section__slider h1,
@@ -389,7 +327,6 @@ p {
   text-align: justify;
   margin: 24px 0;
 }
-
 @media (min-width: 992px) {
   .red-section__content p,
 .red-section__slider p,
@@ -398,39 +335,28 @@ p {
     width: 445px;
   }
 }
+
 .contact-section {
   color: #101010;
 }
-
 @media (min-width: 1200px) {
   .contact-section {
     padding-bottom: 78px;
   }
 }
+
 .footer-section {
   background: #101010;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   padding: 1vw;
 }
-
 .footer-section img {
   width: 30%;
   margin: 0 auto;
   border-radius: 6px;
 }
-
-/*# sourceMappingURL=main.css.map */
 
 /*# sourceMappingURL=main.css.map */
