--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -88,9 +88,12 @@ a {
 }
 
 h2 {
-  padding: 63px 0;
+  padding: 5vw 0;
   color: black;
   text-align: center;
+  @include respond-to("lg") {
+    padding: 63px 0;
+  }
 }
 h3 {
   font-size: 18px;
@@ -129,6 +132,7 @@ p {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     text-align: center;
+    display: none;
 
     @include respond-to("md") {
       display: block;
@@ -169,6 +173,9 @@ p {
       position: absolute;
       margin: 0;
     }
+  }
+  a {
+    margin-bottom: 4vw;
   }
 
   button {
@@ -256,7 +263,7 @@ p {
     text-align: center;
     width: 50vw;
     padding: 3vw;
-    height: 290px;
+    height: 220px;
     position: relative;
     flex-direction: column;
     display: flex;
@@ -264,6 +271,7 @@ p {
     align-items: center;
     @include respond-to("md") {
       width: 255px;
+      height: 290px;
       padding: 30px;
       justify-content: space-between;
     }
@@ -289,10 +297,10 @@ p {
 
     .technology__item--content {
       margin-top: 19px;
-      padding: 0 34px 4px;
+      max-width: 191px;
 
       @include respond-to("md") {
-        padding: 0;
+        padding: 0 34px 4px;
       }
     }
   }
